<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadastro"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sinaisVitais"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sinaisVitais"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:text="@string/textView2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="45dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="94dp"
        android:text="@string/textView3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:text="@string/textView4"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196dp"
        android:text="@string/textView5"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/textView6"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="225dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginStart="110dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="121dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="99dp"
        android:layout_height="22dp"
        android:layout_alignStart="@+id/sinaisVitais"
        android:layout_alignTop="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="70dp"
        android:layout_height="21dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView2"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="83dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="175dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="65dp"
        android:layout_height="27dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView6"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="225dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="175dp"
        android:layout_marginStart="-91dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/button" />

</RelativeLayout>